--- a/index.html
+++ b/index.html
@@ -7,17 +7,19 @@
     <title>JavaScript Quiz Game</title>
 </head>
 <body>
-    <div>   
+    <div class="wrapper">   
         <div id="start">
             <h1>Question Game</h1>
-            <button>Start Game</button>
-        </div>
-        <div id="questions">
-            <h2 id="question-header"></h2>
-            <div id="choices"></div>
-        </div>
-        <div id="end"></div>
+            <button id="start-button">Start Game</button>
+                </div> 
+                <div class = "quiz-game">
+                    <div id="questions" class="hide">
+                    <h2 id="question"></h2>
+                    <ul id="asking-questions"></ul>
+            </div id="end" class="hide"></div>
+         <div>
     </div>
+    <footer> ©BoDaley</footer>
     <script src="assets/js/questions.js"> </script>
     <script src="assets/js/script.js"> </script>
  
