--- a/index.html
+++ b/index.html
@@ -7,17 +7,25 @@
     <title>JavaScript Quiz Game</title>
 </head>
 <body>
-    <div>   
-        <div id="start">
-            <h1>Question Game</h1>
-            <button>Start Game</button>
-        </div>
-        <div id="questions">
-            <h2 id="question-header"></h2>
-            <div id="choices"></div>
-        </div>
-        <div id="end"></div>
+    <div class="wrapper">   
+       <div class="container">
+            <div id="start">
+                <h1>Question Game</h1>
+                <button id="start-button">Start Game</button>
+                <div class = "quiz-game">
+                    <div id="questions" class="hide">
+                    <h2 id="question"></h2>
+                        <div id ="answer-buttons" class="btn-grid">
+                            <!-- <button class="btn">Answer 1</button>
+                            <button class="btn">Answer 2</button>
+                            <button class="btn">Answer 3</button>
+                            <button class="btn">Answer 4</button>
+                            <button class="btn">Answer 5</button> -->
+                        </div>
+            </div id="end" class="hide"></div>
+         <div>
     </div>
+    <footer> ©BoDaley</footer>
     <script src="assets/js/questions.js"> </script>
     <script src="assets/js/script.js"> </script>
  
