--- a/index.html
+++ b/index.html
@@ -12,18 +12,20 @@
             <div id="start">
                 <h1>Question Game</h1>
                 <button id="start-button">Start Game</button>
-                <div class = "quiz-game">
-                    <div id="questions" class="hide">
-                    <h2 id="question"></h2>
-                        <div id ="answer-buttons" class="btn-grid">
-                            <!-- <button class="btn">Answer 1</button>
-                            <button class="btn">Answer 2</button>
-                            <button class="btn">Answer 3</button>
-                            <button class="btn">Answer 4</button>
-                            <button class="btn">Answer 5</button> -->
+            </div>
+                <div id="quiz-game">
+                        <div id="questions" class="hide">
+                            <h2 id="question"></h2>
+                            <div id ="answer_buttons" class="btn-grid">
+                            <!-- <button id="answer0"></button>
+                            <button id="answer1"></button>
+                            <button id="answer2"></button>
+                            <button id="answer3"></button>
+                            <button id="answer4"></button> -->
+                            </div>
                         </div>
-            </div id="end" class="hide"></div>
-         <div>
+                    <div id="end" class="hide"></div>
+             </div> 
     </div>
     <footer> ©BoDaley</footer>
     <script src="assets/js/questions.js"> </script>
