--- a/index.html
+++ b/index.html
@@ -14,17 +14,19 @@
                 <button id="start-button">Start Game</button>
             </div>
                 <div id="quiz-game">
-                        <div id="questions" class="hide">
-                            <h2 id="question"></h2>
-                            <div id ="answer_buttons" class="btn-grid">
-                            <!-- <button id="answer0"></button>
-                            <button id="answer1"></button>
-                            <button id="answer2"></button>
-                            <button id="answer3"></button>
-                            <button id="answer4"></button> -->
-                            </div>
-                        </div>
-                    <div id="end" class="hide"></div>
+                    <div id="questions" class="hide">
+                           <h2 id="question"></h2>
+                           <div id ="answerButtons" class="btn-grid">
+                           <button id="answer1"></button>
+                           <button id="answer2"></button>
+                           <button id="answer3"></button>
+                           <button id="answer4"></button> 
+                           </div>
+                     </div>
+                    <div id="end" class="hide">End of Quiz
+                        <h1>Play Again</h1>
+                    <button id="restart-button">Restart Game</button>
+                    </div>
              </div> 
     </div>
     <footer> ©BoDaley</footer>
