Fixing file structure

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
             </div>
                 <div id="quiz-game">
                     <div id="questions" class="hide">
-                           <h2 id="question"></h2>
+                        <div id="timer"></div>   
+                        <h2 id="question"></h2>
                            <div id ="answerButtons" class="btn-grid">
                            <button id="answer1"></button>
                            <button id="answer2"></button>
