created core functionality just need to add basic css

--- a/index.html
+++ b/index.html
@@ -25,8 +25,12 @@
                            </div>
                      </div>
                     <div id="end" class="hide">End of Quiz
-                        <h1>Play Again</h1>
-                    <button id="restart-button">Restart Game</button>
+                        <h1>Play Again?</h1>
+                        <h3 id="display-user-score">Your Score: </h3>
+                        <p>Enter your initials: </p>
+                        <input id="initials-input" type="text">
+                        <button id="save-high-score">Save High Score</button>
+                        <button id="restart-button">Restart Game</button>
                     </div>
              </div> 
     </div>
