fixed incorrect choices going to next question and added a display high score function

--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
                         <p>Enter your initials: </p>
                         <input id="initials-input" type="text">
                         <button id="save-high-score">Save High Score</button>
+                    </div>
+                    <div class="hide" id="show-high-scores">
+                        <h1>HIGHSCORES</h1>
+                        <ol id="score-list"></ol>
                         <button id="restart-button">Restart Game</button>
                     </div>
              </div> 
